@@ -93,7 +93,7 @@
                 netty5-testsuite-native,netty5-testsuite-native-image,netty5-testsuite-native-image-client,
                 netty5-testsuite-native-image-client-runtime-init,netty5-testsuite-osgi,netty5-testsuite-shading,
                 netty5-transport-blockhound-tests,netty5-transport-native-unix-common-tests,netty5-microbench,
-                netty5-dev-tools,netty5-example
+                netty5-dev-tools,netty5-example,netty5-memory-segment
               </skippedModules>
               <additionalOptions>
                 <!--
@@ -201,6 +201,9 @@
       <activation>
         <jdk>20</jdk>
       </activation>
+      <modules>
+        <module>buffer-memory-segment</module>
+      </modules>
       <properties>
         <!-- Not use alpn agent as Java11+ supports alpn out of the box -->
         <argLine.alpnAgent />
@@ -373,6 +376,14 @@
       <id>unsafeBuffer</id>
       <properties>
         <argLine.java9.extras>-Dio.netty5.tryReflectionSetAccessible=true --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/jdk.internal.misc=ALL-UNNAMED -Dio.netty5.buffer.api.MemoryManager=Unsafe</argLine.java9.extras>
+      </properties>
+    </profile>
+
+    <!-- Enable MemorySegment buffer implementation. -->
+    <profile>
+      <id>memsegBuffer</id>
+      <properties>
+        <argLine.java9.extras>-Dio.netty5.tryReflectionSetAccessible=true --enable-preview -Dio.netty5.buffer.api.MemoryManager=MemorySegment</argLine.java9.extras>
       </properties>
     </profile>
 
@@ -1116,7 +1127,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>3.1.0</version>
+        <version>3.1.2</version>
         <executions>
           <execution>
             <id>check-style</id>
@@ -1159,7 +1170,7 @@
           <dependency>
             <groupId>com.puppycrawl.tools</groupId>
             <artifactId>checkstyle</artifactId>
-            <version>8.29</version>
+            <version>8.41</version>
           </dependency>
           <dependency>
             <groupId>io.netty</groupId>
